CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(msgui)

set(MSGUI_NUMBER 1)
set(MSGUI_VERSION 0)
set(MSGUI_BUILD_NUMBER 103)

set (CMAKE_CXX_STANDARD 14)

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)

SET(CMAKE_INSTALL_LIBDIR lib)
# The library output directory
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

# Find the Log4Qt library
find_package(Log4Qt REQUIRED)

# Find the QtWidgets library
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

find_package(Qt5 COMPONENTS Core Widgets Xml REQUIRED)

# Find the mredit library
find_package(mredit REQUIRED)

add_subdirectory(libs)
add_subdirectory(app)
